# docker2nix

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs
src/compose/: mod.rs  parser.rs  resolve.rs
src/dockerfile/: apt.rs  mod.rs  parser.rs
src/mapping/: apt_to_nix.rs  mod.rs
src/nix/: flake_gen.rs  mod.rs  process_compose.rs
