[package]
name = "docker2nix"
version = "0.1.0"
edition = "2021"
description = "Generate Nix Flake devShell from Dockerfile/docker-compose.yml"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
